...
                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Dg-dP-BxN" userLabel="Camera">
                                                                        <rect key="frame" x="0.0" y="0.0" width="98.333333333333329" height="28"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="show-camera-ui"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xcp-cp-rvw" userLabel="Camera Preview">
                                                                        <rect key="frame" x="131.33333333333334" y="0.0" width="65.333333333333329" height="28"/>
                                                                        <accessibility key="accessibilityConfiguration" identifier="show-camera-preview"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                        <state key="normal" title="Preview"/>
...
                                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                                <state key="normal" title="Show UI Test"/>
                                                                <connections>
                                                                    <segue destination="9PG-vw-mrg" kind="show" id="n2m-cz-6iQ"/>
...
                                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GrG-53-N5h">
                                                                <rect key="frame" x="0.0" y="396.66666666666663" width="196.33333333333334" height="28"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="io.sentry.ui-test.button.get-application-support-directory"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QHh-KM-erK">
                                                                <rect key="frame" x="0.0" y="0.0" width="0.0" height="34"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="io.sentry.ui-test.text-field.data-marshaling.extras"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Extra" image="ellipsis.circle.fill" catalog="system" selectedImage="ellipsis.circle.fill" id="e34-WA-EKV"/>
                    <connections>
                        <outlet property="anrFillingRunLoopButton" destination="2e4-48-rLl" id="MXb-mV-5SL"/>
...
                                        <rect key="frame" x="0.0" y="79.666666666666686" width="361" height="34.333333333333343"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="filled" title="Show Fallback"/>
                                        <connections>
                                            <action selector="presentFallback:" destination="fdb-vc-001" eventType="touchUpInside" id="fdb-act-fallback"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Feedback" image="bubble.left.and.bubble.right" catalog="system" selectedImage="bubble.left.and.bubble.right.fill" id="fdb-tab-itm"/>
                    <connections>
                        <outlet property="toggleWidgetButton" destination="fdb-btn-toggle" id="fdb-out-toggle"/>
...
