...
            captureSession.stopRunning()
        }
    }

    private func setupBackgroundLabel() {
        let backgroundLabel = UILabel()
        backgroundLabel.text = "BACKGROUND"
        backgroundLabel.textColor = UIColor(
            displayP3Red: 0.5,
            green: 0.32074801106853668,
            blue: 0.11964321975700687,
            alpha: 1
        )
...
            backgroundLabel.centerXAnchor.constraint(equalTo: view.safeAreaLayoutGuide.centerXAnchor),
            backgroundLabel.centerYAnchor.constraint(equalTo: view.safeAreaLayoutGuide.centerYAnchor)
        ])
    }

    private func setupPreviewView() {
        previewView.accessibilityIdentifier = "session-replay-camera-preview"
        previewView.isAccessibilityElement = true
        view.addSubview(previewView)

        previewView.translatesAutoresizingMaskIntoConstraints = false
        NSLayoutConstraint.activate([
            previewView.leadingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.leadingAnchor),
...
